# GuitarStrumSequencer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Release/Guitar Strum Sequencer Windows.vst3/Contents/Resources/: moduleinfo.json
Release/Guitar Strum Sequencer.component/Contents/: Info.plist
Release/Guitar Strum Sequencer.component/Contents/MacOS/: Guitar Strum Sequencer
Release/Guitar Strum Sequencer.vst3/Contents/: Info.plist
Release/Guitar Strum Sequencer.vst3/Contents/MacOS/: Guitar Strum Sequencer
Release/Guitar Strum Sequencer.vst3/Contents/Resources/: moduleinfo.json
Release/Guitar Strum Sequencer.vst3/Contents/_CodeSignature/: CodeResources
Source/: GuitarVoicer.cpp  GuitarVoicer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StepSequencer.cpp  StepSequencer.h  StrumEngine.cpp  StrumEngine.h
Source/UI/: ControlPanelComponent.cpp  ControlPanelComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  FretboardComponent.cpp  FretboardComponent.h  StepSequencerComponent.cpp  StepSequencerComponent.h
